# IO-26_Zinchenko-A_Kursova-2

./: CMakeLists.txt  Makefile
include/: calculator.h
src/: calculator.cpp  main.cpp
